style: :lipstick: fix spacing and formatting inconsistencies in CSS files

--- a/src/components/PaymentOption/PaymentOptions.css
+++ b/src/components/PaymentOption/PaymentOptions.css
@@ -37,7 +37,7 @@
 }
 
 .result h3 {
-  margin: .5;
+  margin: 0.5;
 }
 
 .total {
@@ -63,5 +63,5 @@
   justify-content: center;
   align-items: center;
   gap: 1em;
-  padding: .5em 0;
+  padding: 0.5em 0;
 }
